# shopping

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: example_1.py  example_2.py  example_3.py  example_4.py  example_5.py  example_6.py
files/: config.yaml
files/stores/: products.json  store_1.yaml  store_2.yaml  store_3.yaml  store_4.yaml
scripts/: make_store.py
shopping_cart/: exc.py
shopping_cart/data_model/: base.py  product.py
shopping_cart/shopping/: cart.py
shopping_cart/store/: operations.py  store.py
test/: conftest.py
test/data_model/: test_base.py
tests/: conftest.py
tests/data_model/: test_base.py  test_product.py
tests/mock_data/: store.yaml
tests/shopping/: test_cart.py
tests/store/: test_operations.py
